--- a/kooplexhub/hub/templates/index.html
+++ b/kooplexhub/hub/templates/index.html
@@ -27,7 +27,7 @@ margin-top: 10px
     {{ plot_server|safe }}
 
 </div>
-  <div class="col-5">
+  <div class="col-5 my-auto">
     {{ plot_user|safe }}
 </div>
 </div>
