seafile button added compute resource modal preset values

--- a/kooplexhub/container/templates/container.html
+++ b/kooplexhub/container/templates/container.html
@@ -27,7 +27,8 @@
 		    {% container_image container %}
                 </div>
                 <!-- Row 2 -->
-                <div class="mb-3">
+                <div class="d-flex mb-3">
+                    {% button_seafile container %}
                     {% container_mounts container %}
                 </div>
                 <!-- Row 3 -->
