--- a/kooplexhub/container/templates/container_list.html
+++ b/kooplexhub/container/templates/container_list.html
@@ -17,7 +17,7 @@
       </div>
     {% endfor %}
     {# new container create button #}
-    <div class="col opacity-75">
+    <div class="col opacity-75" id="card-container-new">
       {% include 'container.html' %}
     </div>
 </div>
